delete ansible provision keep it simple.

--- a/http/ubuntu/preseed.cfg
+++ b/http/ubuntu/preseed.cfg
@@ -240,7 +240,7 @@ d-i partman-auto/expert_recipe string boot-root : \
         5120 1 -1 btrfs \
             $primary{ } $bootable{ } \
             method{ format } format{ } \
-            use_filesystem{ } filesystem{ btrfs } \
+            use_filesystem{ } filesystem{ ext4 } \
             label { root } mountpoint{ / } .
 
 # If you just want to change the default filesystem from ext3 to something
@@ -384,7 +384,7 @@ d-i pkgsel/upgrade select full-upgrade
 # Policy for applying updates. May be "none" (no automatic updates),
 # "unattended-upgrades" (install security updates automatically), or
 # "landscape" (manage system with Landscape).
-d-i pkgsel/update-policy select unattended-upgrades
+#d-i pkgsel/update-policy select unattended-upgrades
 
 # Some versions of the installer can report back on what software you have
 # installed, and what software you use. The default is not to report back,
