--- a/http/ubuntu/preseed.cfg
+++ b/http/ubuntu/preseed.cfg
@@ -359,7 +359,7 @@ d-i partman/confirm_nooverwrite boolean true
 # By default the installer requires that repositories be authenticated
 # using a known gpg key. This setting can be used to disable that
 # authentication. Warning: Insecure, not recommended.
-#d-i debian-installer/allow_unauthenticated boolean true
+d-i debian-installer/allow_unauthenticated boolean true
 
 # Uncomment this to add multiarch configuration for i386
 #d-i apt-setup/multiarch string i386
