--- a/http/ubuntu/preseed.cfg
+++ b/http/ubuntu/preseed.cfg
@@ -384,7 +384,7 @@ d-i pkgsel/upgrade select full-upgrade
 # Policy for applying updates. May be "none" (no automatic updates),
 # "unattended-upgrades" (install security updates automatically), or
 # "landscape" (manage system with Landscape).
-#d-i pkgsel/update-policy select unattended-upgrades
+d-i pkgsel/update-policy select none
 
 # Some versions of the installer can report back on what software you have
 # installed, and what software you use. The default is not to report back,
