keep using ansible for provision but do nothing.

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,9 +1,6 @@
 ---
 # tasks file for roles/common
 
-- name: (common) | install python-simplejson prevent /usr/bin/python not found error
-  apt:
-    name: python-simplejson
-    state: present
-  when: ansible_os_family == "Debian"
+- name: (common) | just say hi
+  command: echo 'just say hi to ansible :P'
 
