--- a/http/centos/ks.cfg
+++ b/http/centos/ks.cfg
@@ -32,10 +32,13 @@ bootloader --location=mbr
 # Clear the Master Boot Record
 zerombr
 # Partition clearing information
-clearpart --all
-# Disk partitioning information
-part / --size=1 --grow --label=root --fsoptions="defaults,noatime,nodiratime" --asprimary
-# https://openstack.redhat.com/Creating_CentOS_and_Fedora_images_ready_for_Openstack - one partition for / in ext4 format (this means, no lvm, no swap, etc.)
+clearpart --all --initlabel
+part swap --asprimary --fstype="swap" --size=4096
+part /boot --fstype xfs --size=200
+part pv.01 --size=1 --grow
+volgroup rootvg01 pv.01
+logvol / --fstype xfs --name=lv01 --vgname=rootvg01 --size=1 --grow
+
 # http://www.rackspace.com/knowledge_center/article/swap-space-on-cloud-servers
 repo --name=updates7 --baseurl=http://ftp.isu.edu.tw/pub/Linux/CentOS/7.2.1511/updates/x86_64/
 
