--- a/http/ubuntu/preseed.cfg
+++ b/http/ubuntu/preseed.cfg
@@ -185,7 +185,7 @@ d-i clock-setup/ntp boolean true
 # - regular: use the usual partition types for your architecture
 # - lvm:     use LVM to partition the disk
 # - crypto:  use LVM within an encrypted partition
-d-i partman-auto/method string regular
+d-i partman-auto/method string lvm
 
 # If one of the disks that are going to be automatically partitioned
 # contains an old LVM configuration, the user will normally receive a
@@ -233,15 +233,6 @@ d-i partman-auto/choose_recipe select atomic
 #              64 512 300% linux-swap                          \
 #                      method{ swap } format{ }                \
 #              .
-
-# Partitioning
-d-i partman-basicfilesystems/no_swap boolean false
-d-i partman-auto/expert_recipe string boot-root : \
-        5120 1 -1 btrfs \
-            $primary{ } $bootable{ } \
-            method{ format } format{ } \
-            use_filesystem{ } filesystem{ ext4 } \
-            label { root } mountpoint{ / } .
 
 # If you just want to change the default filesystem from ext3 to something
 # else, you can do that without providing a full recipe.
