remove build.sh update preseed.cfg update packer json files

--- a/http/ubuntu/preseed.cfg
+++ b/http/ubuntu/preseed.cfg
@@ -199,7 +199,7 @@ d-i partman-lvm/confirm_nooverwrite boolean true
 
 # For LVM partitioning, you can select how much of the volume group to use
 # for logical volumes.
-#d-i partman-auto-lvm/guided_size string max
+d-i partman-auto-lvm/guided_size string max
 #d-i partman-auto-lvm/guided_size string 10GB
 #d-i partman-auto-lvm/guided_size string 50%
 
